# Adversarial_Probing_of_Quantized_unlearnt_Models

./: .gitignore  README.md  eval_all.sh  main.py  pyproject.toml  requirements.txt  test_cloze.json  test_queries.json  test_queries.txt
results/: base_fp16_auto_cloze_results.json  base_fp16_auto_generative_results.json  base_fp16_auto_results.json  base_int4_auto_cloze_results.json  base_int4_auto_results.json  base_int8_auto_cloze_results.json  base_int8_auto_results.json  npo_fp16_auto_cloze_results.json  npo_fp16_auto_results.json  ta_fp16_auto_cloze_results.json  ta_fp16_auto_results.json  ta_int4_auto_cloze_results.json  ta_int4_auto_results.json  ta_int8_auto_cloze_results.json  ta_int8_auto_results.json
results_custom/: base_fp16_auto_results.json  base_int4_auto_results.json  base_int8_auto_results.json  npo_fp16_auto_results.json  ta_fp16_auto_results.json  ta_int4_auto_results.json  ta_int8_auto_results.json
src/: config.json  model_runner.py  pipeline.py  quantize_ta.py
src/attacks/: cipher.py  format_shifting.py  gradient_suffix.py  indirect.py  persona.py  translation.py
