[project]
name = "adversarial-probing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "deep-translator>=1.11.4",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
]
